# client-server

./: .clang-format  CMakeLists.txt
client/: CMakeLists.txt  client_main.cpp
client/include/: Client.h  ClientFileTransferHandler.h  IClientFileTransferHandler.h
client/src/: Client.cpp  ClientFileTransferHandler.cpp
common/: CMakeLists.txt
common/include/: IMessageHandler.h  ISocket.h  Message.h  MessageSerialization.h  MessageType.h  PosixSocket.h  WinsockSocket.h
common/src/: MessageSerialization.cpp  PosixSocket.cpp  WinsockSocket.cpp
docs/: class_diagram.mmd  client_send_message_pattern.mmd
server/: CMakeLists.txt  server_main.cpp
server/include/: BroadcastMessageHandler.h  ClientHandler.h  CompositeMessageHandler.h  FileTransferHandler.h  IClientHandler.h  Server.h
server/src/: BroadcastMessageHandler.cpp  ClientHandler.cpp  CompositeMessageHandler.cpp  FileTransferHandler.cpp  Server.cpp
